--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,13 +20,51 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('app_index_index') }}">Blog</a>
+                {# affiche le rendu de la méthode menu() de CategoryController #}
+                {{ render(controller('App\\Controller\\CategoryController::menu')) }}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_user_register') }}">
+                            Inscription
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
-    <div class="container">
-        {% block body %}
-        {% endblock %}
-    </div>
+
+        <div class="container">
+            {# affichage des messages flash #}
+            {% for type, messages in app.session.flashBag.all %}
+                {# pour la classe alert-danger de bootstrap #}
+                {% if type == 'error' %}
+                    {% set type = 'danger' %}
+                {% endif %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ type }} mt-2">
+                        {{ message|raw }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
+            {% block body %}
+            {% endblock %}
+        </div>
+
+
+        <div class="collapse navbar-collapse" id="navbarAdminContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('app_admin_category_index') }}">
+                        Gestion catégories
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+
+
+
 
         {% block javascripts %}
             <script
