--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -4,4 +4,12 @@
 
 {% block body %}
     <h1>Accueil</h1>
+
+    <div class="list-group list-group-flush">
+        {% for article in articles %}
+            <a href="{{ path('app_admin_article_index', {'id': article.id}) }}">
+                {{ article.title }}
+            </a>
+        {% endfor %}
+    </div>
 {% endblock %}
