--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -10,6 +10,6 @@
     {% endif %}
 
         <h2>Derniers articles</h2>
-        {% include 'article/article/_list.html.twig' with {'articles': articles} only %}
+        {% include 'article/_list.html.twig' with {'articles': articles} only %}
 
 {% endblock %}
