--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -7,6 +7,12 @@
         Rédiger un article
     </a>
 
+    {#
+    Ajouter une colonne avec le nombre de commentaires
+    qui soit un lien clicable vers une page qui liste les commentaires
+    de l'article dans un tableau HTML avec un bouton "supprimer" pour la modération
+    #}
+
     <table class="table table-stripped">
         <tr class="table-dark">
             <th>Id</th>
@@ -14,6 +20,7 @@
             <th>Date pub.</th>
             <th>Catégorie</th>
             <th>Auteur</th>
+            <th>Commentaires</th>
             <th width="250px"></th>
         </tr>
         {% for article in articles %}
@@ -23,6 +30,7 @@
             <td>{{ article.publicationDate|date('d/m/Y H:i') }}</td>
             <td>{{ article.category }}</td>
             <td>{{ article.author }}</td>
+            <td class="text-center"></td>
             <td>
                 <a href="{{ path('app_admin_article_edit', {'id': article.id}) }}" class="btn btn-primary">
                     Modifier
