--- a/templates/admin/article/index.html.twig
+++ b/templates/admin/article/index.html.twig
@@ -7,6 +7,37 @@
         Rédiger un article
     </a>
 
+    <div class="card bg-light mb-3">
+        <div class="card-body">
+            {{ form_start(search_form) }}
+
+            <div class="row">
+                <div class="col-md-6">
+                    {{ form_row(search_form.title) }}
+                </div>
+                <div class="col-md-6">
+                    {{ form_row(search_form.category) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    {{ form_row(search_form.start_date) }}
+                </div>
+                <div class="col-md-6">
+                    {{ form_row(search_form.end_date) }}
+                </div>
+            </div>
+
+            <div class="text-right">
+                <button type="submit" class="btn btn-info">
+                    Rechercher
+                </button>
+            </div>
+
+            {{ form_end(search_form) }}
+        </div>
+    </div>
+
     {#
     Ajouter une colonne avec le nombre de commentaires
     qui soit un lien clicable vers une page qui liste les commentaires
@@ -21,7 +52,7 @@
             <th>Catégorie</th>
             <th>Auteur</th>
             <th>Commentaires</th>
-            <th width="250px"></th>
+            <th width="300px"></th>
         </tr>
         {% for article in articles %}
         <tr>
@@ -30,7 +61,11 @@
             <td>{{ article.publicationDate|date('d/m/Y H:i') }}</td>
             <td>{{ article.category }}</td>
             <td>{{ article.author }}</td>
-            <td class="text-center"></td>
+            <td class="text-center">
+                <a class="badge badge-info" href="{{ path('app_admin_article_index', {'id': article.id}) }}">
+                    {{ article.comments|length }}
+                </a>
+            </td>
             <td>
                 <a href="{{ path('app_admin_article_edit', {'id': article.id}) }}" class="btn btn-primary">
                     Modifier
@@ -38,8 +73,33 @@
                 <a href="{{ path('app_admin_article_delete', {'id': article.id}) }}" class="btn btn-danger">
                     Supprimer
                 </a>
+                <a class="btn btn-info btn-content" href="{{ path('app_admin_article_ajaxcontent', {'id': article.id}) }}">
+                    Aperçu
+                </a>
             </td>
         </tr>
+            {% else %}
+            <tr>
+                <td colspan="7" class="text-center">Aucun résultat</td>
+            </tr>
         {% endfor %}
     </table>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" id="modal-content">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-body"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('javascript/admin_article.js') }}"></script>
+
 {% endblock %}
