--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -72,6 +72,11 @@
                             </a>
                         </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_index_contact') }}">
+                            Contact
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
